--- a/index.html
+++ b/index.html
@@ -1,93 +1,236 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-CN">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Vicwrt</title>
-    <style>
-        html,
-        body {
-            height: 100%;
-            /* 设置高度为 100% */
-            margin: 0;
-            /* 清除默认边距 */
-            padding: 0;
-            /* 清除默认内边距 */
-            position: relative; /* 使得伪元素相对于body定位 */
-            overflow: hidden; /* 防止溢出 */
-        }
 
-        body::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-image: url('img/background.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            opacity: 0.95; /* 设置透明度，范围在0到1之间 */
-            z-index: -1; /* 确保在内容之后 */
-        }
-
-        /* 其他样式 */
-        h1 {
-            color: white;
-            /* 设置标题颜色 */
-            text-align: center;
-            /* 标题居中 */
-        }
-
-        .float-img {
-            float: left;
-            margin-right: 20px;
-        }
-
-        .audio-player {
-            position: fixed;
-            left: 10px;
-            top: 100px;
-            z-index: 10000;
-            width: 25%;
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-    </style>
-    <script>
-        function openAudio(url) {
-            const newWindow = window.open("", "_blank");
-            newWindow.document.write(`
-                <html>
-                <head>
-                    <title>突如其来的爱情故事</title>
-                </head>
-                <body>
-                    <h1>突如其来的爱情故事 - 小田和正</h1>
-                    <img src="img/1.jpg" alt="赤名莉香" width="300" height="200" style="float:left;margin-right:20px;">
-                    <audio controls>
-                        <source src="${url}" type="audio/mpeg">
-                        您的浏览器不支持音频元素。
-                    </audio>
-                </body>
-                </html>
-            `);
-            newWindow.document.close();
-        }
-    </script>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Vicwrt</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="robots" content="all,follow">
+        <!-- Bootstrap CSS-->
+        <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+        <!-- Google fonts-->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cardo:400,400i">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
+        <!-- Lightbox-->
+        <link rel="stylesheet" href="vendor/lightbox2/css/lightbox.min.css">
+        <!-- Font Awesome-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+            integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+        <!-- Parallax-->
+        <link rel="stylesheet" href="vendor/onepage-scroll/onepage-scroll.css">
+        <!-- theme stylesheet-->
+        <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+        <!-- Custom stylesheet - for your changes-->
+        <link rel="stylesheet" href="css/custom.css">
+        <!-- Favicon-->
+        <link rel="shortcut icon" href="favicon.png">
+        <!-- Tweaks for older IEs--><!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    </head>
 </head>
 
 <body>
-    <p>
-        <a href="javascript:void(0);" onclick="openAudio('music/突如其来的爱情故事 - 小田和正.mp3')">
-            <h1>突如其来的爱情故事 - 小田和正</h1>
-        </a>
-    </p>
 
-    <!-- <audio controls class="audio-player">
-        <source src="突如其来的爱情故事 - 小田和正.mp3" type="audio/mpeg">
-        您的浏览器不支持音频元素。
-    </audio> -->
+    <div class="main">
+
+        <section class="bg-cover bg-center hero">
+            <div class="dark-overlay"></div>
+            <div class="position-relative z-index-1">
+                <div class="container text-center text-white">
+                    <p class="font-italic lead">Oh, hello, nice to meet you!</p>
+                    <h1 class="text-uppercase my-4">My name is Vicwrt</h1>
+                    <p class="font-italic lead">I just want to show you something i like.</p>
+                    <!-- <p class="font-italic lead">I have best results with nice pictures on the background or nice colours.</p> -->
+                </div>
+            </div>
+            <div class="scroll-btn link-scroll"><i class="fas fa-angle-double-down"></i></div>
+        </section>
+
+        <section class="bg-gray">
+            <div class="d-flex h-100 align-items-center">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 mb-4 mb-lg-0">
+                            <header class="text-center">
+                                <h2 class="text-uppercase lined">A song</h2>
+                            </header>
+                            <!-- 添加音乐播放功能 -->
+                            <div style="text-align: center;">
+                                <br><br> <!-- 插入两个换行 -->
+                                <p class="lead">突如其来的爱情故事 - 小田和正</p><audio controls>
+                                    <source src="music/突如其来的爱情故事 - 小田和正.mp3" type="audio/mpeg">
+                                    您的浏览器不支持音频元素。
+                                </audio>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-6"><img src="img/1.jpg" alt="..."
+                                class="img-fluid rounded-circle d-block mx-auto"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section class="bg-gray">
+          <div class="d-flex h-100 align-items-center">
+            <div class="container">
+              <header class="mb-5 text-center">
+                <h2 class="text-uppercase lined">Services</h2>
+              </header>
+              <div class="row text-center">
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="fas fa-desktop"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">Web design</h4>
+                  <p class="text-mted">Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="fas fa-print"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">Print</h4>
+                  <p class="text-mted">Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="fas fa-globe-americas"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">SEO and SEM</h4>
+                  <p class="text-mted">Am terminated it excellence invitation projection as. She graceful shy.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="far fa-lightbulb"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">consulting</h4>
+                  <p class="text-mted">Fifth abundantly made Give sixth hath. Cattle creature i be don't them.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="far fa-envelope"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">Email marketing</h4>
+                  <p class="text-mted">Advantage old had otherwise sincerity dependent additions. It in adapted natural.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <div class="icon mb-3"><i class="fas fa-user"></i></div>
+                  <h4 class="text-uppercase lined lined-compact">UI &amp; UX</h4>
+                  <p class="text-mted">Am terminated it excellence invitation projection as. She graceful shy.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+   -->
+        <!-- <section>
+          <div class="d-flex h-100 align-items-center">
+            <div class="container">
+              <header class="text-center mb-5">
+                <h2 class="text-uppercase lined">Portfolio</h2>
+              </header>
+              <div class="row">
+                <div class="col-lg-12 text-center">
+                  <p>You can make also a portfolio or image gallery.</p>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-1.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-1.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-2.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-2.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-3.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-3.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-4.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-4.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-5.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-5.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+                <div class="col-lg-4 col-md-6 mb-4"><a href="img/portfolio-6.jpg" data-lightbox="image-1" data-title="My caption" class="d-block mb-1"><img src="img/portfolio-6.jpg" alt="..." class="img-fluid d-block mx-auto"></a></div>
+              </div>
+            </div>
+          </div>
+        </section>
+  
+        <section class="bg-gray">
+          <div class="d-flex h-100 align-items-center">
+            <div class="container">
+              <header class="text-center mb-5">
+                <h2 class="text-uppercase lined">Text page</h2>
+              </header>
+              <div class="row">
+                <div class="col-lg-6">
+                  <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
+                  <p>Betrayed cheerful declared end and. Questions we additions is extremely incommode. Next half add call them eat face. Age lived smile six defer bed their few. Had admitting concluded too behaviour him she. Of death to or to being other.</p>
+                </div>
+                <div class="col-lg-6">
+                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+                  <p>Saw yet kindness too replying whatever marianne. Old sentiments resolution admiration unaffected its mrs literature. Behaviour new set existence dashwoods. It satisfied to mr commanded consisted disposing engrossed. Tall snug do of till on easy. Form not calm new fail.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+  
+        <section>
+          <div class="d-flex h-100 align-items-center">
+            <div class="container">
+              <header class="text-center mb-5">
+                <h2 class="text-uppercase lined">Contact</h2>
+              </header>
+              <div class="row">
+                <div class="col-lg-6">
+                  <form action="" class="contact-form">
+                    <div class="row">
+                      <div class="form-group col-lg-6">
+                        <label for="firstName">Your firstname *</label>
+                        <input id="firstName" type="text" name="firstname" placeholder="Enter your firstname" class="form-control">
+                      </div>
+                      <div class="form-group col-lg-6">
+                        <label for="lastName">Your lastname *</label>
+                        <input id="lastName" type="text" name="lastname" placeholder="Enter your lastname" class="form-control">
+                      </div>
+                      <div class="form-group col-lg-12">
+                        <label for="email">Your email *</label>
+                        <input id="email" type="email" name="email" placeholder="Enter your email" class="form-control">
+                      </div>
+                      <div class="form-group col-lg-12">
+                        <label for="message">Your message for us *</label>
+                        <textarea id="message" name="message" placeholder="Enter your message" class="form-control"></textarea>
+                      </div>
+                      <div class="form-group col-lg-12">
+                        <button type="submit" class="btn btn-outline-primary w-100">Send message</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+                <div class="col-lg-6">
+                  <p>Effects present letters inquiry no an removed or friends. Desire behind latter me though in. Supposing shameless am he engrossed up additions. My possible peculiar together to. Desire so better am cannot he up before points. Remember mistaken opinions it pleasure of debating. Court front maids forty if aware their at. Chicken use are pressed removed.</p>
+                  <p>Able an hope of body. Any nay shyness article matters own removal nothing his forming. Gay own additions education satisfied the perpetual. If he cause manor happy. Without farther she exposed saw man led. Along on happy could cease green oh.</p>
+                  <ul class="mb-0 list-inline text-center">
+                    <li class="list-inline-item"><a href="#" class="social-link social-link-facebook"><i class="fab fa-facebook-f"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="social-link social-link-twitter"><i class="fab fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="social-link social-link-google-plus"><i class="fab fa-google-plus-g"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="social-link social-link-instagram"><i class="fab fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="#" class="social-link social-link-email"><i class="fas fa-envelope"></i></a></li>
+                  </ul>
+                </div>
+              </div>
+  
+              <footer class="py-5 mt-5">
+                <div class="row">
+                  <div class="col-lg-6 text-center text-lg-left">
+                    <p class="font-italic mb-0 text-gray">&copy; Your name/company goes here</p>
+                  </div>
+                  <div class="col-lg-6 text-center text-lg-right">
+                    <p class="font-italic mb-0 text-gray">&copy; <a target="_blank" href="http://www.mobanwang.com/" title="网页模板" class="text-gray">网页模板</a></p>
+                  </div>
+                </div>
+              </footer>
+            </div>
+          </div>
+        </section>
+   -->
+    </div>
+
+    <!-- JavaScript files-->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script>
+    <script src="vendor/lightbox2/js/lightbox.min.js"></script>
+    <script src="js/front.js"></script>
+
+    <!-- FontAwesome CSS - loading as last, so it doesn't block rendering-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
 </body>
 
 </html>
